add open weather api project.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
     <div class="showErrors"></div>
     <div class="showHumidity"></div>
     <div class="showTemp"></div>
+    <div class="showFarenheit"></div>
+    <div class="showDescription"></div>
   </div>
 </body>
 </html>
