--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,19 @@
 <html lang="en-US">
 <head>
-  <title>Weather</title>
+  <title>GIPHY</title>
 </head>
 <body>
   <div class="container">
-    <h1>Get Weather Conditions From Anywhere!</h1>
-    <label for="location">Enter a location:</label>
+    <h1>Get fun GIFs from GIPHY!</h1>
+    <label for="location">Enter your search:</label>
     <input id="location" type="text">
-    <button class="btn-success" id="weatherLocation">Get Current Temperature and Humidity</button>
+    <button class="btn-success" id="gifSearch">Search!</button>
+    <button class="btn-success" id="gifTrending">See Trending:</button>
+    <button class="btn-success" id="gifRandom">Random!</button>
     <div class="showErrors"></div>
     <div class="showHumidity"></div>
-    <div class="showTemp"></div>
-    <div class="showFarenheit"></div>
+    <img id="showTemp">
+    <div id="showFarenheit"></div>
     <div class="showDescription"></div>
   </div>
 </body>
